--- a/pom.xml
+++ b/pom.xml
@@ -631,9 +631,9 @@
 						<configuration>
 							<type>CLEAN_INSERT</type>
 				        	<driver>com.mysql.jdbc.Driver</driver>
-				        	<url>jdbc:mysql://localhost:3306/bionicwheels?createDatabaseIfNotExist=true&amp;amp;useUnicode=true&amp;amp;characterEncoding=utf-8&amp;amp;sessionVariables=FOREIGN_KEY_CHECKS=0</url>
+				        	<url>jdbc:mysql://localhost:8889/bionicwheels?createDatabaseIfNotExist=true&amp;amp;useUnicode=true&amp;amp;characterEncoding=utf-8&amp;amp;sessionVariables=FOREIGN_KEY_CHECKS=0</url>
 				        	<username>root</username>
-				        	<password>magisamdg</password>
+				        	<password>root</password>
 				       		<format>flat</format>
 							<sources>
 								<source>src/main/resources/data/users.xml</source>
