--- a/src/main/resources/META-INF/spring/database.properties
+++ b/src/main/resources/META-INF/spring/database.properties
@@ -1,14 +1,14 @@
 #Updated at Wed Sep 14 15:07:38 PHT 2011
 #Wed Sep 14 15:07:38 PHT 2011
-database.password=magisamdg
-database.url=jdbc\:mysql\://localhost\:3306/bionicwheels
+database.password=root
+database.url=jdbc\:mysql\://localhost\:8889/bionicwheels
 database.username=root
 database.driverClassName=com.mysql.jdbc.Driver
 
 #for hibernate config
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.connection.driver_class=com.mysql.jdbc.Driver
-hibernate.connection.url=jdbc\:mysql\://localhost\:3306/bionicwheels?createDatabaseIfNotExist=true&amp;amp;useUnicode=true&amp;amp;characterEncoding=utf-8&amp;amp;sessionVariables=FOREIGN_KEY_CHECKS=0
+hibernate.connection.url=jdbc\:mysql\://localhost\:8889/bionicwheels?createDatabaseIfNotExist=true&amp;amp;useUnicode=true&amp;amp;characterEncoding=utf-8&amp;amp;sessionVariables=FOREIGN_KEY_CHECKS=0
 hibernate.connection.pool_size=10
 hibernate.connection.username=root
-hibernate.connection.password=magisamdg
+hibernate.connection.password=root
